@@ -1,22 +1,43 @@
 package kr.hhplus.be.server.interfaces.api.cart;
 
+import kr.hhplus.be.server.application.cart.CartOutput;
 import kr.hhplus.be.server.domain.cart.Cart;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
 import java.util.List;
 import java.util.stream.Collectors;
 
-public record CartResponse(Long id, Long userId, List<CartItemRequest> cartItems) {
+@Getter @Builder
+public class CartResponse {
+    private Long userId;
+    private List<Item> items;
 
-    @Transactional
-    public static CartResponse fromEntity(Cart cart) {
-        if (cart == null) {
-            return null;
-        }
-        List<CartItemRequest> items = cart.getCartItems().stream()
-                .map(CartItemRequest::fromEntity)
-                .collect(Collectors.toList());
-        return new CartResponse(cart.getId(), cart.getUserId(), items);
+    public static CartResponse from(CartOutput output) {
+        List<Item> items = output.getItems().stream()
+                .map(i -> Item.builder()
+                        .productId(i.getProductId())
+                        .productName(i.getProductName())
+                        .quantity(i.getQuantity())
+                        .price(i.getPrice())
+                        .build())
+                .toList();
+
+        return CartResponse.builder()
+                .userId(output.getUserId())
+                .items(items)
+                .build();
     }
 
+    @Getter @Builder
+    public static class Item {
+        private Long productId;
+        private String productName;
+        private int quantity;
+        private BigDecimal price;
+    }
 }
